Adding isFlag method and Twig extension

--- a/Resources/translations/messages.en.xliff
+++ b/Resources/translations/messages.en.xliff
@@ -418,6 +418,10 @@
                 <source>Pick.a.board</source>
                 <target>Pick a board</target>
             </trans-unit>
+            <trans-unit id="105">
+                <source>in.%title%</source>
+                <target>in %title%</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
